--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,65 +8,66 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --_size: 1.6rem;
+    --_font-default: sans-serif;
+    --_font-accent: sans-serif;
+    --_radius-s: 1.5rem;
+    --_radius-m: 2.2rem;
+    --_radius-l: 3rem;
+    --_radius-xl: 3.6rem;
+    --_animspeed-fast: 0.1s;
+    --_animspeed-medium: 0.3s;
+    --_animspeed-slow: 0.6s;
+    --_animbezier: cubic-bezier(0.23, 0.65, 0.74, 1.09);
+    /* white theme color */
+    --base: #e6ebf4;
+    --base-tint: #ebf0f7;
+    --base-shade: #bdc1c8;
+    --accent: #aa70e0;
+    --secondary: #7059e2;
+    --secondary-rgba: rgba(112, 89, 226, 0.3);
+    --stroke-controls: #a8b0c1;
+    --stroke-controls-neutral: rgba(0, 0, 0, 0.3);
+    --stroke-elements: #d1d5e0;
+    --t-bright: #22232c;
+    --t-medium: #424550;
+    --t-muted: #666a79;
+    --t-accent: #8f56cc;
+    --t-secondary: #5d4ec4;
+    --t-disabled: #717586;
+    --t-placeholder: #969bb2;
+    --base-opp: #111111;
+    --t-opp-bright: #ebf0f7;
+    --t-opp-medium: #c7c6d3;
+    --t-opp-muted: #a1a1af;
+    --gradient-one: #cec4ef;
+    --gradient-two: #f5c5cd;
+    --gradient-three: #ac8fe3;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
+    /* dark theme color */
+    --base: #111111;
+    --base-tint: #161616;
+    --base-shade: #000000;
+    --accent: #e4b8bf;
+    --secondary: #cec4ef;
+    --secondary-rgba: rgba(206, 196, 239, 0.2);
+    --stroke-controls: #4b4b51;
+    --stroke-controls-neutral: rgba(255, 255, 255, 0.3);
+    --stroke-elements: #303033;
+    --t-bright: #e9e9f1;
+    --t-medium: #c7c6d3;
+    --t-muted: #a1a1af;
+    --t-accent: #e1bac5;
+    --t-secondary: #cec4ef;
+    --t-disabled: #8b8a91;
+    --t-placeholder: #58585e;
+    --base-opp: #fafafa;
+    --t-opp-bright: #121319;
+    --t-opp-medium: #626577;
+    --t-opp-muted: #717586;
+    --gradient-one: #a287d5;
+    --gradient-two: #e4b8bf;
+    --gradient-three: #8b6bc5;
   }
 }
