feat: apply Bai Jamjuree font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Bai Jamjuree", sans-serif;
 }
 
 @layer base {
   :root {
     --_size: 1.6rem;
-    --_font-default: sans-serif;
-    --_font-accent: sans-serif;
+    --_font-default: "Bai Jamjuree", sans-serif;
+    --_font-accent: "Bai Jamjuree", sans-serif;
     --_radius-s: 1.5rem;
     --_radius-m: 2.2rem;
     --_radius-l: 3rem;
