--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,7 @@ body {
 ::-webkit-scrollbar {
   width: 5px;
   background: var(--base-shade);
+  height: 0px;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: var(--_radius-s);
