--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,9 +76,20 @@ body {
 ::-webkit-scrollbar {
   width: 5px;
   background: var(--base-shade);
-  height: 0px;
+  height: 5px;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: var(--_radius-s);
   background: linear-gradient(to top left, var(--accent), var(--secondary));
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    transform: translateY(1rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0rem);
+    opacity: 1;
+  }
 }
